tests/netedit/basic/configs/netecfg/load/invalid/network/errors.netedit
Error: File 'C:\Users\alva_pa\.texttest\tmp\netedit.gui.1_from_16Jan105329.8892\netedit.gui\basic\configs\netecfg\load\invalid\network\dummy.net.xml' is not accessible (No such file or directory).
Error: No nodes loaded.
Error: Failed to build network.
TestFunctions: Killed Netedit process. 'reference.png' not found
